--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>深邃液態單字卡 - 專業版</title>
+    <title>學測7000單字複習器</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -88,4 +88,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
