--- a/index.html
+++ b/index.html
@@ -10,83 +10,65 @@
 
     <div class="blob blob-1"></div>
     <div class="blob blob-2"></div>
-    <div class="blob blob-3"></div>
 
     <div class="container">
-        
         <div class="top-bar">
-            <div class="mode-switch">
-                <button class="mode-btn active" id="btnModeAll" onclick="app.setMode('all')">一般模式</button>
-                <button class="mode-btn" id="btnModeSaved" onclick="app.setMode('saved')">
-                    我的收藏
-                </button>
-            </div>
-            <div class="settings-area">
-                <select id="levelSelect" onchange="app.filterLevel(this.value)">
-                    <option value="ALL">全部難度</option>
-                    <option value="A1">Level A1</option>
-                    <option value="A2">Level A2</option>
-                    <option value="B1">Level B1</option>
-                </select>
-                <button class="icon-btn" title="重置進度" onclick="app.resetProgress()">
-                    <svg viewBox="0 0 24 24"><path d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z" fill="#fff"/></svg>
-                </button>
-            </div>
-        </div>
-
-        <div class="progress-container">
-            <div class="progress-fill" id="progressBar"></div>
-        </div>
-        <div class="progress-text" id="progressText">0 / 0</div>
-
-        <div id="quizView">
-            <div class="card-display">
-                <div class="action-icons">
-                    <button class="icon-btn" id="btnSaveCard" onclick="app.toggleSaveCurrent()" title="收藏此卡片">
-                        <svg viewBox="0 0 24 24" id="iconBookmark"><path d="M17 3H7c-1.1 0-1.99.9-1.99 2L5 21l7-3 7 3V5c0-1.1-.9-2-2-2zm0 15l-5-2.18L7 18V5h10v13z" fill="#fff"/></svg>
+            <div class="row-controls">
+                <div class="level-filters" id="levelFilters"></div>
+                <div style="display: flex; gap: 10px; align-items: center;">
+                    <div class="mode-switch">
+                        <button class="mode-btn active" id="modeAll" onclick="app.setMode('all')">複習</button>
+                        <button class="mode-btn" id="modeSaved" onclick="app.setMode('saved')">收藏</button>
+                    </div>
+                    <button class="icon-btn" onclick="app.reset()" title="重置進度">
+                        <svg viewBox="0 0 24 24"><path d="M1 4v6h6M23 20v-6h-6M20.49 9A9 9 0 005.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 013.51 15"/></svg>
                     </button>
                 </div>
-                <span class="pos-badge" id="cardPos">NOUN</span>
+            </div>
+        </div>
+
+        <div class="progress-wrapper">
+            <div class="progress-bg"><div class="progress-fill" id="progressBar"></div></div>
+            <span id="progressText">0 / 0</span>
+        </div>
+
+        <div id="quizView">
+            <div class="card-body">
+                <div class="top-right-tools">
+                    <button class="icon-btn" onclick="app.speak()" title="發音">
+                        <svg viewBox="0 0 24 24"><path d="M11 5L6 9H2v6h4l5 4V5zM19.07 4.93a10 10 0 010 14.14M15.54 8.46a5 5 0 010 7.07"/></svg>
+                    </button>
+                    <button class="icon-btn" id="btnSave" onclick="app.toggleSave()">
+                        <svg viewBox="0 0 24 24" id="saveIcon"><path d="M19 21l-7-5-7 5V5a2 2 0 012-2h10a2 2 0 012 2z"/></svg>
+                    </button>
+                </div>
+                <span class="pos-tag" id="cardPos"></span>
                 <div class="word-zh" id="cardZh">載入中...</div>
             </div>
 
-            <div class="input-area">
-                <input type="text" id="answerInput" placeholder="輸入英文..." autocomplete="off">
+            <div class="input-group">
+                <input type="text" id="answerInput" placeholder="請輸入英文單字..." autocomplete="off">
+                <button class="btn btn-skip" id="btnSkip" onclick="app.skip()">跳過</button>
             </div>
 
-            <div class="feedback" id="feedbackArea">
-                <div class="feedback-header">
-                    <span id="feedbackIcon"></span>
-                    <span id="feedbackText"></span>
-                </div>
-                <div class="answer-text" id="feedbackAnswer"></div>
-                <div class="example-box">
-                    <div class="ex-en" id="feedbackExEn"></div>
-                    <div class="ex-zh" id="feedbackExZh"></div>
-                </div>
+            <div class="feedback-area" id="feedbackArea">
+                <div class="fb-word" id="fbWord"></div>
+                <div class="ex-en" id="fbExEn"></div>
+                <div class="ex-zh" id="fbExZh"></div>
             </div>
 
-            <button class="btn-main" id="nextBtn" onclick="app.nextCard()">下一題</button>
+            <button class="btn btn-next" id="btnNext" onclick="app.next()">下一題</button>
         </div>
 
-        <div id="completeView" class="complete-view">
-            <h2>恭喜！</h2>
-            <p>目前篩選範圍的卡片已全部複習完畢。</p>
-            <br>
-            <button class="btn-main" style="display:block" onclick="app.resetProgress()">重新開始</button>
+        <div class="complete-screen" id="completeView">
+            <h2 style="font-size: 2rem; margin-bottom: 15px;">全部完成！</h2>
+            <p style="color: var(--text-sub); margin-bottom: 25px;">此範疇的單字已複習完畢。</p>
+            <button class="btn" style="background: var(--accent-color); color: #000; padding: 12px 30px;" onclick="app.reset()">重新開始</button>
         </div>
-
-        <div class="history-panel">
-            <h4>近期記錄 (History)</h4>
-            <div id="historyList">
-                </div>
-        </div>
-
     </div>
 
     <script src="word.js"></script>
 
     <script src="script.js"></script>
 </body>
-
 </html>
