--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <div class="blob blob-1"></div>
     <div class="blob blob-2"></div>
 
@@ -20,7 +19,7 @@
                         <button class="mode-btn active" id="modeAll" onclick="app.setMode('all')">複習</button>
                         <button class="mode-btn" id="modeSaved" onclick="app.setMode('saved')">收藏</button>
                     </div>
-                    <button class="icon-btn" onclick="app.reset()" title="重置進度">
+                    <button class="icon-btn" onclick="app.reset()" title="重置當前進度">
                         <svg viewBox="0 0 24 24"><path d="M1 4v6h6M23 20v-6h-6M20.49 9A9 9 0 005.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 013.51 15"/></svg>
                     </button>
                 </div>
@@ -68,7 +67,6 @@
     </div>
 
     <script src="word.js"></script>
-
     <script src="script.js"></script>
 </body>
 </html>
